src/test/ui/conditional-compilation/cfg-attr-unknown-attribute-macro-expansion.rs
macro_rules! foo {
    () => {
        #[cfg_attr(all(), unknown)] //~ ERROR `unknown` is currently unknown
        fn foo() {}
    }
}

foo!();

fn main() {}
